# Weighted-Scoring-Model

./: CHANGELOG.md  Google Sheet  README.md  __init__.py  archivesspace.py  backup.py  credentials_example.yml  google_sheets.py  logging_manager.py  menu.py  test_config_manager.py  test_logging_manager.py  test_sync_engine.py  test_validation.py
Automated Model/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  accession_sync.py  pyproject.toml
Automated Model/.github/ISSUE_TEMPLATES/: bug_report.md
Automated Model/tests/: test_config_manager.py  test_validation.py
Automated Scoring Model/: LICENSE  README.md  accession_sync.py  bug_report.md  config_manager.py  download  extent_conversion.md  notifications.py  scheduler.py  sync_engine.py
Manual/: Google Sheet  Google Sheet.txt
archivesspace-accession-sync/: CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  accession_sync.py  config.yml  credentials_example.yml  data_example.yml  pyproject.toml
archivesspace-accession-sync/docs/: extent_conversion.md  keyword_detection.md  platform_installation.md
archivesspace-accession-sync/sync/: actions.py  archivesspace.py  cli.py  config_manager.py  google_sheets.py  menu.py  notifications.py  runner.py  scoring_criteria.py  supporting_sheets.py  sync_engine.py  updater.py  wizard.py
archivesspace-accession-sync/tests/: test_all.py  test_logging_manager.py  test_sync_engine.py
sync-tool/: CONTRIBUTING.md  LICENSE  README.md  config.yml  pyproject.toml  wizard.py
sync-tool/docs/: google_cloud_setup.md  scoring_formulas.md  security.md
sync-tool/examples/: config_small_archive.yml  config_university.yml  credentials_example.yml
sync-tool/sync/: __init__.py  actions.py  archivesspace.py  backup.py  cli.py  config_manager.py  excel.py  logging_manager.py  (+10 more)
(+1 files in other folders)
