[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "archivesspace-accession-sync"
version = "0.1.0"
description = "Synchronize ArchivesSpace accession metadata to Excel or Google Sheets for processing prioritization."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "University of Iowa Libraries"}
]
keywords = ["archivesspace", "archives", "accessions", "synchronization", "metadata"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Other/Nonlisted Topic",
]

dependencies = [
    "archivessnake>=0.9.0,<1.0",
    "pyyaml>=6.0,<7.0",
    "rapidfuzz>=3.0,<4.0",
    "requests>=2.28,<3.0",
]

[project.optional-dependencies]
excel = [
    "openpyxl>=3.1.0,<4.0",
]
google = [
    "google-api-python-client>=2.80,<3.0",
    "google-auth>=2.16,<3.0",
    "google-auth-oauthlib>=1.0,<2.0",
    "google-auth-httplib2>=0.1,<1.0",
]
dev = [
    "pytest>=7.0,<9.0",
    "pytest-cov>=4.0,<6.0",
    "black>=23.0",
]

[project.scripts]
accession-sync = "sync.cli:main"

[tool.setuptools.packages.find]
include = ["sync*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
